# indras

./: CHANGELOG.md  indras.cabal
app/: Main.hs
prf/: LinearRationalTransform.agda
src/Math/: LRTDenotationQQ.hs  LinearRationalTransformations.hs
tst/: Main.hs
tst/Math/: ArbitraryLRT.hs  ArbitraryReal.hs
