cabal-version:      3.4
name:               indras
version:            0.1.0.0
synopsis:           Indra's Pearls
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simon Beaumont
maintainer:         datalligator@icloud.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common optimisations
    ghc-options: -O2 -fllvm
    
library
    import:           warnings
    import:           optimisations
    exposed-modules:  Math.LinearRationalTransformations
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable indras
    import:           warnings
    import:           optimisations    
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        indras,
        diagrams-lib
    hs-source-dirs:   app
    default-language: GHC2021
    
test-suite indras-test
    import:           warnings
    import:           optimisations
    default-language: GHC2021
    
    other-modules:    Math.ArbitraryLRT
                    , Math.ArbitraryReal
    other-extensions: TemplateHaskell
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tst
    main-is:          Main.hs
    build-depends:
                  QuickCheck >= 2.14.2,
                  base ^>=4.17.0.0,
                  ieee754,
                  indras,
                  quickcheck-instances
